--- a/index.html
+++ b/index.html
@@ -6,5 +6,20 @@
     <link rel="stylesheet" href="/style.css" />
     <title>Tea Cozy</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav class="navbar">
+        <div class="logo">
+          <img src="/images/img-tea-cozy-logo.png" alt="logo" />
+        </div>
+        <div>
+          <ul class="list-items">
+            <li><a href="#">Mission</a></li>
+            <li><a href="#">Featured Tea</a></li>
+            <li><a href="#">Locations</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+  </body>
 </html>
