--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="logo">
           <img src="/images/img-tea-cozy-logo.png" alt="logo" />
         </div>
-        <div>
+        <div class="links">
           <ul class="list-items">
             <li><a href="#">Mission</a></li>
             <li><a href="#">Featured Tea</a></li>
