--- a/index.html
+++ b/index.html
@@ -21,5 +21,91 @@
         </div>
       </nav>
     </header>
+    <main>
+      <section class="hero">
+        <h2 class="primary-heading">Our Mission</h2>
+        <h4 class="description">
+          Handpicked,Artisanally Curated, Free Range, Sustainable, Small Batch,
+          Fair Trade, Organic Tea
+        </h4>
+      </section>
+      <!-- Second Section -->
+      <section class="section-2">
+        <h2>Tea of the Month</h2>
+        <h4>What's Steeping at The Tea Cozy?</h4>
+        <figure>
+          <img
+            src="/images/img-berryblitz.jpg"
+            class="images"
+            alt="A cup of tea"
+          />
+          <figcaption>
+            <h4>Fall Berry Blitz Tea</h4>
+          </figcaption>
+        </figure>
+        <figure>
+          <img
+            src="/images/img-spiced-rum.jpg"
+            class="images"
+            alt=" A wooden box of rum bottles"
+          />
+          <figcaption>
+            <h4>Spiced Rum Tea</h4>
+          </figcaption>
+        </figure>
+        <figure>
+          <img
+            src="/images/img-donut.jpg"
+            class="images"
+            alt=" Donut on plate"
+          />
+          <figcaption>
+            <h4>Seasonal Donuts</h4>
+          </figcaption>
+        </figure>
+        <figure>
+          <img
+            src="/images/img-myrtle-ave.jpg"
+            class="images"
+            alt="A cup of tea"
+          />
+          <figcaption>
+            <h4>Myrtle Ave Tea</h4>
+          </figcaption>
+        </figure>
+        <figure>
+          <img
+            src="/images/img-bedford-bizarre.jpg"
+            class="images"
+            alt="A cup of tea"
+          />
+          <figcaption>
+            <h4>Bedford Bizzare Tea</h4>
+          </figcaption>
+        </figure>
+      </section>
+      <!-- Third Section -->
+      <section class="section-3">
+        <h2>Locations</h2>
+        <div class="container-1">
+          <h3>Downtown</h3>
+          <p>384 West 4th St Suite 108 Portland, Maine</p>
+        </div>
+        <div class="container-2">
+          <h3>East Bayside</h3>
+          <p>3433 Phisherman's Avenue (Northwest Corner) Portland, Maine</p>
+        </div>
+        <div class="container-3">
+          <h3>Oakdale</h3>
+          <p>515 Cresent Avenue Second Floor Portland, Maine</p>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <h2>The Tea Cozy</h2>
+      <h5>contact@theteacozy.com</h5>
+      <p>917-555-908</p>
+      <p>Copyright The Tea Cozy 2017</p>
+    </footer>
   </body>
 </html>
