--- a/index.html
+++ b/index.html
@@ -22,68 +22,74 @@
       </nav>
     </header>
     <main>
-      <section class="hero">
-        <h2 class="primary-heading">Our Mission</h2>
-        <h4 class="description">
-          Handpicked,Artisanally Curated, Free Range, Sustainable, Small Batch,
-          Fair Trade, Organic Tea
-        </h4>
-      </section>
+      <div class="hero-section">
+        <section class="hero">
+          <div class="mission">
+            <h2 class="primary-heading">Our Mission</h2>
+            <h4 class="description">
+              Handpicked,Artisanally Curated, Free Range, Sustainable, Small
+              Batch, Fair Trade, Organic Tea
+            </h4>
+          </div>
+        </section>
+      </div>
       <!-- Second Section -->
-      <section class="section-2">
+      <div class="gallery">
         <h2>Tea of the Month</h2>
         <h4>What's Steeping at The Tea Cozy?</h4>
-        <figure>
-          <img
-            src="/images/img-berryblitz.jpg"
-            class="images"
-            alt="A cup of tea"
-          />
-          <figcaption>
-            <h4>Fall Berry Blitz Tea</h4>
-          </figcaption>
-        </figure>
-        <figure>
-          <img
-            src="/images/img-spiced-rum.jpg"
-            class="images"
-            alt=" A wooden box of rum bottles"
-          />
-          <figcaption>
-            <h4>Spiced Rum Tea</h4>
-          </figcaption>
-        </figure>
-        <figure>
-          <img
-            src="/images/img-donut.jpg"
-            class="images"
-            alt=" Donut on plate"
-          />
-          <figcaption>
-            <h4>Seasonal Donuts</h4>
-          </figcaption>
-        </figure>
-        <figure>
-          <img
-            src="/images/img-myrtle-ave.jpg"
-            class="images"
-            alt="A cup of tea"
-          />
-          <figcaption>
-            <h4>Myrtle Ave Tea</h4>
-          </figcaption>
-        </figure>
-        <figure>
-          <img
-            src="/images/img-bedford-bizarre.jpg"
-            class="images"
-            alt="A cup of tea"
-          />
-          <figcaption>
-            <h4>Bedford Bizzare Tea</h4>
-          </figcaption>
-        </figure>
-      </section>
+        <section class="section-2">
+          <figure>
+            <img
+              src="/images/img-berryblitz.jpg"
+              class="images"
+              alt="A cup of tea"
+            />
+            <figcaption>
+              <h4>Fall Berry Blitz Tea</h4>
+            </figcaption>
+          </figure>
+          <figure>
+            <img
+              src="/images/img-spiced-rum.jpg"
+              class="images"
+              alt=" A wooden box of rum bottles"
+            />
+            <figcaption>
+              <h4>Spiced Rum Tea</h4>
+            </figcaption>
+          </figure>
+          <figure>
+            <img
+              src="/images/img-donut.jpg"
+              class="images"
+              alt=" Donut on plate"
+            />
+            <figcaption>
+              <h4>Seasonal Donuts</h4>
+            </figcaption>
+          </figure>
+          <figure>
+            <img
+              src="/images/img-myrtle-ave.jpg"
+              class="images"
+              alt="A cup of tea"
+            />
+            <figcaption>
+              <h4>Myrtle Ave Tea</h4>
+            </figcaption>
+          </figure>
+          <figure>
+            <img
+              src="/images/img-bedford-bizarre.jpg"
+              class="images"
+              alt="A cup of tea"
+            />
+            <figcaption>
+              <h4>Bedford Bizzare Tea</h4>
+            </figcaption>
+          </figure>
+        </section>
+      </div>
       <!-- Third Section -->
       <section class="section-3">
         <h2>Locations</h2>
