--- a/index.html
+++ b/index.html
@@ -91,27 +91,41 @@
         </section>
       </div>
       <!-- Third Section -->
-      <section class="section-3">
-        <h2>Locations</h2>
-        <div class="container-1">
-          <h3>Downtown</h3>
-          <p>384 West 4th St Suite 108 Portland, Maine</p>
-        </div>
-        <div class="container-2">
-          <h3>East Bayside</h3>
-          <p>3433 Phisherman's Avenue (Northwest Corner) Portland, Maine</p>
-        </div>
-        <div class="container-3">
-          <h3>Oakdale</h3>
-          <p>515 Cresent Avenue Second Floor Portland, Maine</p>
-        </div>
-      </section>
+      <div class="locations">
+        <section class="section-3">
+          <h2>Locations</h2>
+          <div class="address">
+            <div class="container-1">
+              <h3>Downtown</h3>
+              <h4>384 West 4th St</h4>
+              <h4>Suite 108</h4>
+              <h4>Portland, Maine</h4>
+            </div>
+            <div class="container-2">
+              <h3>East Bayside</h3>
+              <h4>3433 Phisherman's Avenue</h4>
+              <h4>(Northwest Corner)</h4>
+              <h4>Portland, Maine</h4>
+            </div>
+            <div class="container-3">
+              <h3>Oakdale</h3>
+              <h4>515 Cresent Avenue</h4>
+              <h4>Second Floor</h4>
+              <h4>Portland, Maine</h4>
+            </div>
+          </div>
+        </section>
+      </div>
     </main>
     <footer>
-      <h2>The Tea Cozy</h2>
-      <h5>contact@theteacozy.com</h5>
-      <p>917-555-908</p>
-      <p>Copyright The Tea Cozy 2017</p>
+      <div class="contact">
+        <h2>The Tea Cozy</h2>
+        <h5>contact@theteacozy.com</h5>
+        <p>917-555-908</p>
+      </div>
+      <div class="copyright">
+        <p>Copyright The Tea Cozy 2017</p>
+      </div>
     </footer>
   </body>
 </html>
